@@ -1,1 +1,4 @@
 -Dfile.encoding=UTF-8
+-DINTRO_CHAPTER_DIR=documentation/target/test-classes
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
